--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             <div class="owl-carousel carousel-nav-center" id="hero-carousel">
                 <!-- SLIDE ITEM -->
                 <div class="hero-slide-item">
-                    <img src="./images/black-banner.png" alt="">
+                    <img src="Images/Porn/Chal-(2024)-Hindi-Season-01-Part-01-Jugnu-WEB-Serie--3282-1.jpg" alt="">
                     <div class="overlay"></div>
                     <div class="hero-slide-item-content">
                         <div class="item-content-wraper">
                             <div class="item-content-title top-down">
-                                Black Panther
+                                GUNGU-(2024) Hindi webseries 
                             </div>
                             <div class="movie-infos top-down delay-2">
                                 <div class="movie-info">
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="movie-info">
                                     <i class="bx bxs-time"></i>
-                                    <span>120 mins</span>
+                                    <span>59mins</span>
                                 </div>
                                 <div class="movie-info">
                                     <span>HD</span>
