--- a/Badabala/papa.html
+++ b/Badabala/papa.html
@@ -17,8 +17,8 @@
     <!-- BOX ICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- APP CSS -->
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="View page source/grid.css">
+    <link rel="stylesheet" href="View page source/app.css">
 </head>
 
 <body>
@@ -879,7 +879,7 @@
     <!-- OWL CAROUSEL -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <!-- APP SCRIPT -->
-    <script src="app.js"></script>
+    <script src="View page source/app.js"></script>
 
 </body>
 
