--- a/View page source/papa.html
+++ b/View page source/papa.html
@@ -51,7 +51,7 @@
     </div>
     <!-- END NAV -->
 <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
-  <iframe src="/Chal-(2024)-Hindi-Season-01-Part-01-Jugnu-WEB-Serie--720p-[HdMaal] (1).mp4"
+  <iframe src="https://videohb.org/e/mm0hj9i40ka68"
     style="width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden; border:none;"
     allowfullscreen
     title="flix player"
